# backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20230723195732_create-user-table.sql  20230723203507_create-api_key-table.sql  20230724191733_create-link-table.sql
src/: main.rs  utils.rs
src/database/: mod.rs  mongo.rs  postgres.rs  redis.rs
src/database/models/: api.rs  mod.rs  user.rs  user_content.rs
src/middleware/: mod.rs  validate_admin_token.rs  validate_api_token.rs
src/models/: api.rs  mod.rs  user.rs  util.rs
src/repo/: mongo.rs
src/routes/: api.rs  auth.rs  mod.rs  user.rs  user_content.rs
src/routes/models/: api.rs  auth.rs  mod.rs  user.rs  user_content.rs
