[package]
name = "linklily-backend"
version = "0.1.0"
authors = ["Jade Nash <jade@lilydev.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"

clap = { version = "4.3.4", features = ["derive"] }

serde = "1.0.164"
serde_json = "1.0.97"

chrono = "0.4.26"
futures = "0.3.28"
rand = "0.8.5"
argon2 = "0.5.0"

dotenvy = "0.15.7"
log = "0.4.19"
pretty_env_logger = "0.5.0"

deadpool-redis = { version = "0.12.0", features = ["serde"] }

[dependencies.redis]
version = "0.23.0"
default-features = false
features = ["tokio-comp", "connection-manager"]

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["async-std-runtime"]
