[package]
name = "linklily-backend"
version = "0.1.0"
authors = ["Jade Nash <jade@lilydev.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["redis-actor-session"]}

anyhow = "1.0.71"

clap = { version = "4.3.4", features = ["derive"] }

serde = "1.0.164"
serde_json = "1.0.97"
strum = { version = "0.25.0", features = ["derive"]}

chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
rand = "0.8.5"
argon2 = "0.5.0"
zxcvbn = "2.2.2"

dotenvy = "0.15.7"
log = "0.4.19"
pretty_env_logger = "0.5.0"

sqlx = { version = "0.7.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"] }

deadpool-redis = { version = "0.12.0", features = ["serde"] }

[dependencies.redis]
version = "0.23.0"
default-features = false
features = ["tokio-comp", "connection-manager"]

